# kube-pyinfra-pulumi-all-in-one

./: .gitattributes  Dockerfile  README.md  example.env  justfile  pyproject.toml  test.http
app/: server.py
app/cli/: run.py
app/lib/: hello.py
assets/: schema.drawio
deploy/: expose_k8s.py  inventory.py  join_workers.py  join_wroker.py  loadbalancer.py  main.py  remote_kubectl.py
deploy/assets/k8s/: nginx-controller-bare-metal.yaml  nginx-controller-bare-metal.yaml.j2
deploy/assets/nginx/: default.conf.j2
deploy/facts/: k8s_facts.py  network_facts.py  swap_facts.py
deploy/tasks/: install_docker.py
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  helper.py
k8s/hello-world/: configmap.yaml  deployment.yaml  ingress.yaml  svc.yaml
k8s/sanic-app/: deployment.yaml  ingress.yaml  svc.yaml
secrets/: Article.md
secrets/iac/: passphrase.txt
secrets/iac/.pulumi/backups/dev/: dev.1672182311838394000.json  dev.1672182311838394000.json.attrs  dev.1672346766381978000.json  dev.1672346766381978000.json.attrs
secrets/iac/.pulumi/history/dev/: dev-1672169046782573000.checkpoint.json  dev-1672169046782573000.checkpoint.json.attrs  dev-1672169046782573000.history.json  dev-1672169046782573000.history.json.attrs  dev-1672182311837400000.history.json  dev-1672182311837400000.history.json.attrs  dev-1672184299151258000.checkpoint.json  dev-1672184299151258000.checkpoint.json.attrs  (+4 more)
secrets/iac/.pulumi/stacks/: dev.json  dev.json.attrs  dev.json.bak  dev.json.bak.attrs
secrets/k8s/: dockerconfig.json  join_cmd.txt  kubeconfig
