[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Senhaji-Rhazi-Hamza <hamza.senhajirhazi@gmail.com>"]
readme = "README.md"
packages = [{include = "lib", from="app"}]

[tool.poetry.dependencies]
python = "^3.9"
pyinfra = "^2.5.3"
sanic = "^22.9.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}


[tool.poetry.group.infra.dependencies]
pulumi = "^3.49.0"
pulumi-gcp = "^6.45.0"


[tool.poetry.group.config-management.dependencies]
pyinfra = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
