[tool.poetry]
name = "kube-pyinfra-pulumi-all-in-one"
version = "0.1.0"
description = ""
authors = ["Senhaji-Rhazi-Hamza <hamza.senhajirhazi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^22.12.0"


[tool.poetry.group.config-management.dependencies]
pyinfra = "^2.6"


[tool.poetry.group.infra.dependencies]
pulumi = "^3.50.2"
pulumi-gcp = "^6.45.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
